ci/Jenkinsfile: cleanup and restructure
- remove unneeded functions and steps

Signed-off-by: Martin Schmiedel <martin.schmiedel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,6 +1,7 @@
 /**
- * Copyright (C) 2017 - 2020 TQ-Systems GmbH
+ * Copyright (C) 2017 - 2022 TQ-Systems GmbH
  * @author Markus Niebel <Markus.Niebel@tq-group.com>
+ * @author Martin Schmiedel <Martin.Schmiedel@tq-group.com>
  * Jenkinsfile for TQ-Systems Yocto-BSPs using declarative pipeline
  * License:     GPLv2
  *
@@ -12,20 +13,6 @@ import groovy.time.*
 /**********************************************************************/
 /*******************         Functions         ************************/
 /**********************************************************************/
-def wipeOutWs(){
-    dir("${env.WORKSPACE}") {
-        echo "Remove ${env.WORKSPACE} ..."
-        deleteDir()
-    }
-    dir("${env.WORKSPACE}@script") {
-        echo "Remove ${env.WORKSPACE}@script ..."
-        deleteDir()
-    }
-    dir("${env.WORKSPACE}@tmp") {
-        echo "Remove ${env.WORKSPACE}@tmp ..."
-        deleteDir()
-    }
-}
 
 /**********************************************************************/
 /* Special submodule handling                                         */
@@ -60,7 +47,7 @@ def checkoutMetaLayers(directoryName) {
 /* create subdirectorys and add symbolic links for sources            */
 /* all git releated files are ignored                 */
 /**********************************************************************/
-def prepareWorkspace(directoryName){
+def prepareWorkspace(directoryName) {
     sshagent(['jenkins-master-key']) {
         def command = $/mkdir --parents ${directoryName}; find $(pwd) -maxdepth 1 \( -not -wholename '*/\.git/*' -and -not -name '.git*' \) -exec ln -vs "{}" ${directoryName}/ ';'/$
         sh(returnStdout: true, script: command).trim()
@@ -79,11 +66,11 @@ def prepareWorkspace(directoryName){
 def mirrorConfiguration(directoryName) {
     dir("${directoryName}") {
         sshagent(['jenkins-master-key']) {
-           echo "create mirror packages for all machines of config ${directoryName} ..."
-           sh "find . -maxdepth 1 -wholename '*-mirror*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
-           sh "./ci/fill_mirror ${env.BUILD_DIR}-mirror \$(basename \$(pwd))"
-           sh "find . -maxdepth 2 -wholename '*-mirror*downloads' | xargs -n1 -I% rsync -rl --checksum --ignore-existing --exclude 'git2*' %/ ${env.WORKSPACE}/${env.DL_DIR}/"
-           sh "find . -maxdepth 1 -wholename '*-mirror*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            echo "create mirror packages for all machines of config ${directoryName} ..."
+            sh "./ci/fill_mirror ${env.BUILD_DIR}-mirror \$(basename \$(pwd))"
+            sh "find . -maxdepth 2 -wholename '*-mirror*downloads' | xargs -n1 -I% rsync -rl --checksum --ignore-existing --exclude 'git2*' %/ ${env.WORKSPACE}/${env.DL_DIR}/"
+            sh "find . -type d -name '*mirror*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            sh "find . -type d -name '*mirror*' -delete"
         }
     }
 }
@@ -103,88 +90,68 @@ def buildConfiguration(directoryName) {
     }
 }
 
-def wipeOutBuildspace(directoryName){
-    dir("${directoryName}/${env.BUILD_DIR}_*/${env.DEPLOY_DIR}") {
-        echo "Remove all deploy directorys directory in ${directoryName} ..."
-        deleteDir()
-    }
-    dir("${directoryName}@script") {
-        echo "Remove ${directoryName}@script ..."
-        deleteDir()
-    }
-    dir("${directoryName}@tmp") {
-        echo "Remove ${directoryName}@tmp ..."
-        deleteDir()
-    }
-}
+/**********************************************************************/
+/* Before the build starts we have to cleanup the Buildspace          */
+/* - delete directories depending on BuildCause                       */
+/* - delete complete build dir for manual triggered builds (RELEASE)  */
+/* - delete only the tmp dir for Timer or Merge Triggered builds      */
+/* - for user and timer builds delete the download dir                */
+/**********************************************************************/
 
-/*
- * delete complete build dir for manual triggered builds (RELEASE) and nightly
- * builds (timer triggered)
- * use shell rm in favour of dir/deleteDir
- *
- * since version 2.24 of workflow-support plugin currentBuild.getBuildCauses()
- * can be used. as an additional benefit - this method is whitelisted  - no need
- * for manual script security exclusions
- */
-def handleBuildCause(directoryName) {
+def cleanupBuild() {
     def causes = currentBuild.getBuildCauses()
+
+    echo "create empty dir, could be used by rsync for deleting folders"
+    sh "mkdir --parents ${env.WORKSPACE}/empty"    
     println causes.toString()
 
     for(cause in causes) {
         def reason = cause.toString()
         cause = null
         if (reason.contains("TimerTriggerCause")) {
-            println "This job was caused by Timer, rm tmp ... (NIGHTLY)"
-            sh "find . -maxdepth 1 -wholename '${directoryName}/${env.BUILD_DIR}_*/tmp*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            println "This job was caused by Timer, remove tmp ... (NIGHTLY)"
+            sh "find . -maxdepth 4 -type d -name 'tmp' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            sh "find . -maxdepth 4 -type d -name 'tmp' -delete"
         } else if (reason.contains("UserIdCause")) {
-            println "This job was caused by user, rm build directory ... (RELEASE)"
-            sh "find . -maxdepth 1 -wholename '${directoryName}/${env.BUILD_DIR}_*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
-        } else if (reason.contains("Merge Request")) {
-            println "This job was caused by Merge Request"
-            sh "find . -maxdepth 1 -wholename '${directoryName}/${env.BUILD_DIR}_*/tmp*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            println "This job was caused by user, remove build directory ... (RELEASE)"
+            sh "find . -maxdepth 3 -type d -name '${env.BUILD_DIR}_*' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            sh "find . -maxdepth 3 -type d -name '${env.BUILD_DIR}_*' -delete"
+        } else if (reason.contains("GitLabWebHookCause")) {
+            println "This job was caused by GitLab remove tmp ..."
+            sh "find . -maxdepth 4 -type d -name 'tmp' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            sh "find . -maxdepth 4 -type d -name 'tmp' -delete"
         } else {
             println "build cause : " + reason
         }
-    }
-    causes = null
-}
 
-def handleGlobalData(directoryName) {
-
-    echo "create empty dir, could be used by rsync for deleting folders"
-    sh "mkdir --parents ${env.WORKSPACE}/empty"
-
-    def causes = currentBuild.getBuildCauses()
-
-    for(cause in causes) {
-        def reason = cause.toString()
-        cause = null
-        /*
-         * for all build cases other then SCM triggered rebuild delete the
-         * DL_DIR
-         */
-        if (!reason.contains("SCMTriggerCause")) {
-            println "clear ${directoryName}/${env.DL_DIR} ..."
-            sh "find . -maxdepth 1 -wholename '${directoryName}/${env.DL_DIR}' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
-
+        if (reason.contains("TimerTriggerCause") || reason.contains("UserIdCause")) {
+            println "clear ${env.DL_DIR} ..."
+            sh "find . -type d -name '${env.DL_DIR}'| xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+            sh "find . -type d -name '${env.DL_DIR}' -delete"
         }
     }
-    causes = null
 
-    /*
-     * last ressort only: clean SSTATE_CACHE
-     */
-    if (params.CLEAN_CACHES == true) {
-        println "CLEAN_CACHES not supported for shared SSTATE_CACHE"
-    }
+    echo "Remove links from last build ..."
+    sh "find . -maxdepth 3 -type l -wholename '*CONFIGS*' -delete"
 
-    /*
-     * remove old archives
-     */
-    echo "clear ${directoryName}/*.tar.gz ... "
-    sh "rm -f ${directoryName}/*.tar.gz"
+    echo "Remove all deploy directorys ..."
+    sh "find . -type d -name 'deploy' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+    sh "find . -type d -name 'deploy' -delete"
+    sh "find . -type d -name 'deployment' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+    sh "find . -type d -name 'deployment' -delete"
+
+    echo "Remove @script ..."
+    sh "find . -type d -name '*@script' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+    sh "find . -type d -name '*@script' -delete"
+
+    echo "Remove @tmp ..."
+    sh "find . -type d -name '*@tmp' | xargs -n1 -P4 -I% rsync --delete-before -a ${env.WORKSPACE}/empty/ %/"
+    sh "find . -type d -name '*@tmp' -delete"
+
+    echo "Remove .tar.gz ... "
+    sh "find . -type f -name '*.tar.gz' -delete"
 }
+
 /**********************************************************************/
 /*******************         Pipeline         *************************/
 /**********************************************************************/
@@ -224,18 +191,14 @@ pipeline {
     }
 
     stages {
-        stage ('Manage sstate cache') {
+        stage ('Cleanup before build') {
             steps {
-                updateGitlabCommitStatus name: 'build', state: 'running'
-                /*
-                 * manageSstateCache(currentBuild.startTimeInMillis()) does not work
-                 * this helps to explicit clean state cache
-                 */
-                handleGlobalData("${env.WORKSPACE}")
+                cleanupBuild()
             }
         }
         stage ('Checkout') {
             steps {
+                updateGitlabCommitStatus name: 'build', state: 'running'
                 checkoutMetaLayers("${env.WORKSPACE}")
             }
         }
@@ -243,43 +206,21 @@ pipeline {
             steps {
                 parallel (
                     "imx" : {
-                        wipeOutBuildspace("${env.WS_IMX}")
                         prepareWorkspace("${env.WS_IMX}")
                     },
                     "ls" : {
-                        wipeOutBuildspace("${env.WS_LS}")
                         prepareWorkspace("${env.WS_LS}")
                     },
                     "minimal" : {
-                        wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
                     },
                     "ti" : {
-                        wipeOutBuildspace("${env.WS_TI}")
                         prepareWorkspace("${env.WS_TI}")
                     },
                 )
             }
         }
-        stage('handle build cause') {
-            steps {
-                parallel (
-                    "imx" : {
-                        handleBuildCause("${env.WS_IMX}")
-                    },
-                    "ls" : {
-                        handleBuildCause("${env.WS_LS}")
-                    },
-                    "minimal" : {
-                        handleBuildCause("${env.WS_MIN}")
-                    },
-                    "ti" : {
-                        handleBuildCause("${env.WS_TI}")
-                    },
-                )
-            }
-        }
-        stage ('Fetch'){
+        stage ('Fetch') {
             steps {
                 parallel (
                     "imx" : {
@@ -297,7 +238,7 @@ pipeline {
                 )
             }
         }
-        stage ('Build'){
+        stage ('Build') {
             steps {
                 parallel (
                     "imx" : {
@@ -315,16 +256,6 @@ pipeline {
                 )
             }
        }
-       stage ('Archive'){
-            when { not {environment name: 'gitlabActionType', value: 'MERGE' } }
-            steps {
-                script {
-                    sshagent(['jenkins-master-key']) {
-                        sh "export STAMP=\$(${env.WORKSPACE}/ci/git-revision-name.sh \"${env.YOCTO_VERSION}\") && ${env.WORKSPACE}/ci/git-archive-all.sh --format tar.gz --prefix ci-meta-tq.\${STAMP}/ ci-meta-tq.\${STAMP}.tar"
-                    }
-                }
-            }
-        }
     }
 
     post {
@@ -339,17 +270,17 @@ pipeline {
                     archiveArtifacts artifacts: "${env.WS_MIN}/*.MIRROR.SRC.tar.gz"
                     archiveArtifacts artifacts: "${env.WS_TI}/*.LIC.tar.gz"
                     archiveArtifacts artifacts: "${env.WS_TI}/*.MIRROR.SRC.tar.gz"
+                    sshagent(['jenkins-master-key']) {
+                        sh "export STAMP=\$(${env.WORKSPACE}/ci/git-revision-name.sh \"${env.YOCTO_VERSION}\") && ${env.WORKSPACE}/ci/git-archive-all.sh --format tar.gz --prefix ci-meta-tq.\${STAMP}/ ci-meta-tq.\${STAMP}.tar"
+                    }
                     archiveArtifacts artifacts: "ci-meta-tq.*.tar.gz"
                 }
 
                 archiveArtifacts artifacts: "${env.WS_IMX}/${env.BUILD_DIR}_*/${env.DEPLOY_DIR}/*"
-                wipeOutBuildspace("${env.WS_IMX}")
                 archiveArtifacts artifacts: "${env.WS_LS}/${env.BUILD_DIR}_*/${env.DEPLOY_DIR}/*"
-                wipeOutBuildspace("${env.WS_LS}")
                 archiveArtifacts artifacts: "${env.WS_MIN}/${env.BUILD_DIR}_*/${env.DEPLOY_DIR}/*"
-                wipeOutBuildspace("${env.WS_MIN}")
                 archiveArtifacts artifacts: "${env.WS_TI}/${env.BUILD_DIR}_*/${env.DEPLOY_DIR}/*"
-                wipeOutBuildspace("${env.WS_TI}")
+                cleanupBuild()
 
                 updateGitlabCommitStatus name: 'build', state: 'success'
             }
