--- a/sources/template/conf/bblayers.conf.sample
+++ b/sources/template/conf/bblayers.conf.sample
@@ -1,13 +1,1 @@
-POKY_BBLAYERS_CONF_VERSION = "2"
-
-BBPATH = "${TOPDIR}"
-BSPDIR := "${@os.path.abspath(os.path.dirname(d.getVar('FILE', True)) + '/../..')}"
-
-BBFILES ?= ""
-BBLAYERS = " \
-  ${BSPDIR}/sources/poky/meta \
-  ${BSPDIR}/sources/poky/meta-poky \
-  \
-  ${BSPDIR}/sources/meta-tq \
-  ${BSPDIR}/sources/meta-dumpling \
-"
+bblayers.conf.minimal
