treewide: prepare using kirkstone
- adjust default branches in .gitmodules file
- reflect structural changes in meta-ti
- sync sources/template/conf/local.conf.sample with upstream
- adjust label in Jenkinsfile

Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -164,7 +164,7 @@ def cleanupBuild() {
  */
 pipeline {
     agent {
-        label 'yocto-honister'
+        label 'yocto-kirkstone'
     }
 
     options {
