ci/Jenkinsfile: use long options for `git branch`
The meaning of the `-l` option of `git branch` has changed between Git 2.17
and 2.25. The usage as found in our Jenkinsfile only works with the newer
version, breaking builds on Ubuntu 18.04 and older.

Use the long option `--list` (and also change `-r` to `--remotes`), which
is portable between Git versions.

Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -45,7 +45,7 @@ def checkoutMetaLayers(directoryName) {
             sh """
             git submodule sync
             git submodule foreach --recursive 'git fetch --force --prune --prune-tags --tags origin'
-            git submodule foreach --recursive 'git remote set-head origin "\$(git branch -r -l "origin/*" | tail -1 | cut -d/ -f2-)"'
+            git submodule foreach --recursive 'git remote set-head origin "\$(git branch --remotes --list "origin/*" | tail -1 | cut -d/ -f2-)"'
             git submodule foreach --recursive 'git reset --hard origin/HEAD'
             git submodule foreach --recursive 'git gc --prune=all'
             git submodule foreach --recursive 'git clean -fdx'
