--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,9 +1,9 @@
+/* SPDX-License-Identifier: GPL-2.0-or-later */
 /**
  * Copyright (C) 2017 - 2022 TQ-Systems GmbH
  * @author Markus Niebel <Markus.Niebel@tq-group.com>
  * @author Martin Schmiedel <Martin.Schmiedel@tq-group.com>
  * Jenkinsfile for TQ-Systems Yocto-BSPs using declarative pipeline
- * License:     GPLv2
  *
  */
 
